Correção de variável de mobile do breakpoint

--- a/src/components/NavBar/NavBar.module.scss
+++ b/src/components/NavBar/NavBar.module.scss
@@ -18,7 +18,7 @@
     height: 200px;
     justify-items: center;
   }
-  @media(max-width: $mobile-sm) {
+  @media(max-width: $mobile) {
     padding: 0 50px;
   }
 }
