Cor de fundo do Header (temporario) para visualização

--- a/src/components/NavBar/NavBar.module.scss
+++ b/src/components/NavBar/NavBar.module.scss
@@ -1,5 +1,6 @@
 .nav {
   align-items: center;
+  background-color: #0C90F0;
   display: grid;
   grid-template-columns: 1fr 2fr 2fr;
   grid-template-areas: 'logo links busca icones';
