--- a/src/components/NavBar/NavBar.module.scss
+++ b/src/components/NavBar/NavBar.module.scss
@@ -1,6 +1,6 @@
 .nav {
   align-items: center;
-  background-color: #0C90F0;
+  background-color: #1875E8;
   display: grid;
   grid-template-columns: 1fr 2fr 2fr;
   grid-template-areas: 'logo links busca icones';
