--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -12,7 +12,7 @@
         color: white;
         font-size: 5rem;
     }
-    &-container {
+    .container {
         display: flex;
         flex-wrap: wrap;
         gap: 50px;
