Estilização da Home

--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -10,7 +10,8 @@
     transform: translateY(-250px);
     h2 {
         color: white;
-        font-size: 5rem;
+        font-size: 2rem;
+        margin: 5rem auto 3rem;
     }
     .container {
         display: flex;
