--- a/src/components/Header/TituloComImagem/TituloComImagem.module.scss
+++ b/src/components/Header/TituloComImagem/TituloComImagem.module.scss
@@ -10,7 +10,7 @@
     grid-template-areas: 'texto' 'imagem';
     text-align: center;
   }
-  &-texto {
+  .texto {
     color: white;
     grid-area: texto;
     h1 {
@@ -20,13 +20,13 @@
       font-size: 25px;
     }
   }
-  &-button {
+  .button {
     display: flex;
     @media(max-width: $tablet) {
       justify-content: center;
     }
   }
-  &-imagem {
+  .imagem {
     align-self: center;
     grid-area: imagem;
     justify-self: center;
