--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -1,33 +1,33 @@
 .footer {
-    align-items: center;
-    background-image: url('assets/images/footer.png');
-    background-repeat: no-repeat;
-    background-size: cover;
-    bottom: 0;
-    color: #fff;
+  align-items: center;
+  background-image: url('assets/images/footer.png');
+  background-repeat: no-repeat;
+  background-size: cover;
+  bottom: 0;
+  color: #fff;
+  display: flex;
+  height: 10rem;
+  justify-content: space-between;
+  padding: 0 6rem;
+  width: 100%;
+  .socialIcons {
     display: flex;
-    height: 10rem;
-    justify-content: space-between;
-    padding: 0 6rem;
-    width: 100%;
-    .socialIcons {
-        display: flex;
-        gap: 6rem;
-    }
-    .copyright {
-        p {
-            font-size: .75rem;
-            margin: .25rem 0;
-            a {
-                border-bottom: 1px solid #fff;
-                color: #fff;
-                font-weight: bold;
-                text-decoration: none;
-                transition: border-color .25s ease-in-out;
-                &:hover {
-                    border-color: transparent;
-                }
-            }
+    gap: 6rem;
+  }
+  .copyright {
+    p {
+      font-size: 0.75rem;
+      margin: 0.25rem 0;
+      a {
+        border-bottom: 1px solid #fff;
+        color: #fff;
+        font-weight: bold;
+        text-decoration: none;
+        transition: border-color 0.25s ease-in-out;
+        &:hover {
+          border-color: transparent;
         }
+      }
     }
+  }
 }
