--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
   box-sizing: border-box;
 }
 body {
-  background-color: #F5F5F5;
+  background-color: #f5f5f5;
   margin: 0;
   font-family: 'Montserrat', sans-serif;
   overflow-x: hidden;
@@ -15,6 +15,6 @@ input {
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family:
+    source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
