--- a/src/pages/Anuncie/Anuncie.module.scss
+++ b/src/pages/Anuncie/Anuncie.module.scss
@@ -1,7 +1,15 @@
+.anuncie {
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  justify-content: center;
+}
+
 .formulario {
   display: flex;
   flex-direction: column;
   gap: 20px;
+  justify-content: center;
   margin: 20px auto;
   flex: 1;
   width: 70%;
