--- a/src/pages/Anuncie/Anuncie.module.scss
+++ b/src/pages/Anuncie/Anuncie.module.scss
@@ -13,4 +13,15 @@
   margin: 20px auto;
   flex: 1;
   width: 70%;
+  input,
+  select {
+    border: none;
+    border-radius: 5px;
+    outline: #1a95f0;
+    padding: 10px 20px;
+    transition: all 0.25s ease-in-out;
+    &:focus {
+        outline: 2px solid #1a95f0;
+    }
+  }
 }
