--- a/src/components/Botao/Botao.module.scss
+++ b/src/components/Botao/Botao.module.scss
@@ -6,4 +6,10 @@
   font-size: 24px;
   padding: 20px 50px;
   text-align: center;
+  transition: all 0.25s ease-in-out;
+  &:hover {
+    background-color: #1a95f0;
+    border-color: #1a95f0;
+    transform: scale(1.05);
+  }
 }
