--- a/src/pages/Anuncie/Anuncie.module.scss
+++ b/src/pages/Anuncie/Anuncie.module.scss
@@ -20,7 +20,7 @@
     border-radius: 5px;
     font-size: 1.25rem;
     outline: #1a95f0;
-    padding: 10px 20px;
+    padding: 20px;
     transition: all 0.25s ease-in-out;
     &:focus {
       outline: 2px solid #1a95f0;
