--- a/src/components/Item/Item.module.scss
+++ b/src/components/Item/Item.module.scss
@@ -25,7 +25,13 @@
   }
 
   &-imagem {
+    height: 160px;
     margin: 0 auto;
+    width: 335px;
+    img {
+      object-fit: contain;
+      width: 100%;
+    }
   }
 
   &-info {
