--- a/src/components/Item/Item.module.scss
+++ b/src/components/Item/Item.module.scss
@@ -22,6 +22,14 @@
     p {
       color: #444;
     }
+    input {
+      border: none;
+      border-radius: 5px;
+      font-size: 1.25rem;
+      outline: #1a95f0;
+      transition: all 0.25s ease-in-out;
+      padding: 10px 20px;
+    }
   }
 
   &-imagem {
