--- a/src/components/Item/Item.module.scss
+++ b/src/components/Item/Item.module.scss
@@ -65,6 +65,14 @@
     flex-direction: column;
     gap: 5px;
   }
+  
+  &-deletar {
+    cursor: pointer;
+    position: absolute;
+    top: -10px;
+    right: -10px;
+    opacity: 0.75;
+  }
 }
 
 .itemNoCarrinho {
