--- a/src/components/Item/Item.module.scss
+++ b/src/components/Item/Item.module.scss
@@ -4,14 +4,15 @@
   display: flex;
   filter: drop-shadow(2px 2px 4px rgba(0, 0, 0, 0.08));
   flex-direction: column;
-  overflow: hidden;
   width: 335px;
   &-descricao {
     background-color: #eff9ff;
+    border-radius: 0 0 10px 10px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     flex: 1;
+    overflow: hidden;
   }
   &-titulo {
     padding: 16px 16px 0 16px;
@@ -25,8 +26,10 @@
   }
 
   &-imagem {
+    border-radius: 10px 10px 0 0;
     height: 160px;
     margin: 0 auto;
+    overflow: hidden;
     width: 335px;
     img {
       object-fit: contain;
@@ -65,13 +68,14 @@
     flex-direction: column;
     gap: 5px;
   }
-  
+
   &-deletar {
     cursor: pointer;
     position: absolute;
-    top: -10px;
-    right: -10px;
+    top: -8px;
+    right: -8px;
     opacity: 0.75;
+    z-index: 99;
   }
 }
 
